--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 
 	<canvas id="gameCanvas" style="display: none;"></canvas>
 
-	<script type="module" src="./index.ts"></script>
+    <script src="index.js"></script>
 </body>
 </html>
