Use window.SOCKET_ADDRESS

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -47,6 +47,10 @@
 
 	<canvas id="gameCanvas" style="display: none;"></canvas>
 
+	<script>
+		window.SOCKET_ADDRESS = "ws://localhost:8020";
+	</script>
+	
 	<script type="module" src="./index.ts"></script>
 </body>
 </html>
