--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mobile Game</title>
+	<title>Rivalyx</title>
 
 	<link rel="stylesheet" href="index.css">
 </head>
@@ -47,6 +47,9 @@
 
 	<canvas id="gameCanvas" style="display: none;"></canvas>
 
+	<script>
+		window.SOCKET_ADDRESS = "ws://localhost:8020";
+	</script>
     <script src="index.js"></script>
 </body>
 </html>
