Latency, colors/assets and exit pannel bug

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -48,6 +48,7 @@
 	<canvas id="gameCanvas" style="display: none;"></canvas>
 
 	<script>
+		window.FORCED_LATENCY = 30; // for debug
 		window.SOCKET_ADDRESS = "ws://localhost:8020";
 	</script>
 	
