Change serv address

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	<canvas id="gameCanvas" style="display: none;"></canvas>
 
 	<script>
-		window.SOCKET_ADDRESS = "ws://localhost:8020";
+		window.SOCKET_ADDRESS = "wss://villager-studio.online:7842";
+		window.FORCED_LATENCY = 5;
 	</script>
     <script src="index.js"></script>
 </body>
