--- a/src/client/index.html
+++ b/src/client/index.html
@@ -47,6 +47,8 @@
 
 	<canvas id="gameCanvas" style="display: none;"></canvas>
 
+	<div id="timer" style="display: none;"></div>
+
 	<script>
 		window.FORCED_LATENCY = 30; // for debug
 		window.SOCKET_ADDRESS = "ws://localhost:8020";
