Update html and css

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 	</div>
 
 	<canvas id="gameCanvas" style="display: none;"></canvas>
+	
+	<div id="timer" style="display: none;"></div>
 
 	<script>
 		window.SOCKET_ADDRESS = "wss://villager-studio.online:7842";
